--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,23 @@
 .currency{
-    
+    text-decoration: none;
+    background-color: #9FAEAD;
+    color: #42847D;
+    border-radius: 5px;
+    padding: 7px;
+}
+
+#currencies{
+    width: 100%;
+    margin: 0 auto;
+}
+
+#currencies > div{
+    display: inline-block;
+    margin-left: 15px;
+    margin-top: 25px;
+}
+
+#chart_div{
+    margin-top: 20px;
+    margin-left: 20%;
 }
